syntax = "proto3";

package proto;

service DAPoSService {
	rpc BroadcastTransaction(Transaction) returns (TransactionResponse) {}
	rpc ReceiveTransaction(Transaction) returns (TransactionResponse) {}
}

message Transaction {
	bytes       hash        = 1;
	string      from        = 2;
	string      to          = 3;
	int64       value       = 4;
	int64       time        = 5;
	int64       delegateId  = 6;
	int64       type        = 7;
}

message TransactionResponse {
    Transaction t = 1;
}
