syntax = "proto3";

package proto;

service DAPoSGrpc {
	rpc BroadcastTransaction(Transaction) returns (TransactionResponse) {}
	rpc ReceiveTransaction(Transaction) returns (TransactionResponse) {}
	rpc RegisterTestNode(TestNode) returns (TransactionResponse) {}
}

message Transaction {
	bytes       hash        = 1;
	bytes       from        = 2;
	bytes       to          = 3;
	int64       value       = 4;
	int64       time        = 5;
	int64       delegateId  = 6;
	int64       type        = 7;
}

message TransactionResponse {
    Transaction t = 1;
}

message TestNode {
	bytes  address = 1;
	string name = 2;
	int64  balance = 3;
}